# tokamak-netcdf

./: .gitignore  Cargo.toml  README.md
src/: equilibrium.rs  error.rs  extract.rs  lib.rs  ncdata.rs  scalars.rs  variable_names.rs
